[ced] Adds more filter options for deals section. Fixes dropdowns from wrapping text.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -263,6 +263,7 @@ h1, h2, h3, h4, h5, h6, p {
 
 .filter-list-item {
   margin-right: $grid-size-double;
+  white-space: nowrap;
 
   &:last-child { margin-right: 0; }
 }
